Fixes #1061: Toolbar in the "Customize" page should be scrollable. Submitted by denis
git-svn-id: https://svn.clinovo.com/clincapture/trunk@1177 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/webapp/includes/css/charts.css
+++ b/web/src/main/webapp/includes/css/charts.css
@@ -22,7 +22,7 @@ table.widgets_container td {
 	right: 0px;
 	top: 100px;
 	vertical-align: top;
-	width: 392px;
+	width: 420px;
 	padding: 5px;
 	border: 1px solid gray;
 	background-color: white;
@@ -43,6 +43,12 @@ table.widgets_container td {
 	background-image: url(../../images/dots.gif);
 	background-repeat: repeat-x;
 	background-position: bottom;
+}
+
+.toolbar_wrapper #toolbar {
+	overflow-x: hidden;
+	overflow-y: scroll;
+	max-height: 500px;
 }
 
 #show_hide {
