Fixes #1046: Rule expression builder improvements. Submitted by markg
git-svn-id: https://svn.clinovo.com/clincapture/trunk@1188 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/webapp/designer/css/designer.css
+++ b/web/src/main/webapp/designer/css/designer.css
@@ -46,15 +46,12 @@ body .panel {
 
 .bordered {
 
-  border: solid !important;
-  border-width: 1px !important;
-  border-color: #357EBD !important;
+  border: none !important;
   background-color: #fff !important;
 }
 
 .dotted-border {
 
-  min-width: 10%;
   margin-top: 3em;
   min-height: 43px;
   margin-right: 2px;
