Fixes #1045: Format issue when scheduling a Repeating Event. Submitted by sergey
git-svn-id: https://svn.clinovo.com/clincapture/trunk@1190 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/webapp/includes/styles.css
+++ b/web/src/main/webapp/includes/styles.css
@@ -2466,3 +2466,7 @@ a.dnShortcut:hover {
 #systemForm .propertyLabel .table_title_Admin {
     font-size: 11px !important;
 }
+
+.scheduleLink {
+    display: block;
+}
