Fixes #1059: Display error message when widget cannot load due to missing widget file. Submitted by denis
git-svn-id: https://svn.clinovo.com/clincapture/trunk@1196 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/webapp/includes/css/charts.css
+++ b/web/src/main/webapp/includes/css/charts.css
@@ -17,6 +17,12 @@ table.widgets_container td {
 	border: 1px solid gray;
 }
 
+.widget .widget_error_message {
+	color: red;
+	font-weight: bold;
+	margin: 15px;
+}
+
 .toolbar_wrapper {
 	position: fixed;
 	right: 0px;
@@ -93,7 +99,7 @@ form#actionForSave input {
 	display: none;
 }
 
-#filler {
+.filler {
 	visibility: hidden;
 	height: 1px;
 	display: block;
