Fixes #1082: Create "Subject Status Count" widget. Submitted by denis
git-svn-id: https://svn.clinovo.com/clincapture/trunk@1202 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/webapp/includes/css/charts.css
+++ b/web/src/main/webapp/includes/css/charts.css
@@ -224,7 +224,7 @@ form#actionForSave input {
 	display: none;
 }
 
-.widget form#events_completion_form {
+.widget form.hidden {
 	display: none;
 }
 
