Fixes #1109: Fix height of 'Events Completion' widget. Submitted by denis
git-svn-id: https://svn.clinovo.com/clincapture/trunk@1208 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/webapp/includes/css/charts.css
+++ b/web/src/main/webapp/includes/css/charts.css
@@ -178,6 +178,11 @@ form#actionForSave input {
 	width: 360px;
 }
 
+.widget .events_completion table.signs {
+	margin-top: 25px;
+	margin-bottom: 27px;
+}
+
 .widget table.signs td {
 	vertical-align: middle;
 }
