Fixes #1080: Double click on any item breaks layout of all other items in IE.. Submitted by markg
git-svn-id: https://svn.clinovo.com/clincapture/trunk@1225 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/webapp/designer/css/designer.css
+++ b/web/src/main/webapp/designer/css/designer.css
@@ -76,8 +76,9 @@ body .panel {
   border-bottom: none !important;
 }
 
-.space-right-p {
+.trash {
   margin-top: 3em;
+  margin-right: 1em;
   padding-right: .3em;
 }
 
@@ -206,7 +207,7 @@ textarea {
   background-color: #F5F5EF; 
 }
 
-td.ui-draggable {
+td {
   cursor: hand;
   cursor: pointer; 
 }
