Fixes #1173: Increase the panel height. Submitted by sergey
git-svn-id: https://svn.clinovo.com/clincapture/trunk@1324 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/webapp/designer/css/designer.css
+++ b/web/src/main/webapp/designer/css/designer.css
@@ -25,6 +25,7 @@ body .container {
   margin-top: 1em;
   overflow-y: hidden;
   padding-right: 1px;
+  height: 100%;
 }
 
 body .panel {
@@ -106,6 +107,7 @@ body .panel-body {
 
 .space-top-sm {
   padding-top: 2.5em;
+  white-space: nowrap;
 }
 
 .space-top-m {
@@ -340,8 +342,12 @@ div {
 }
 
 .inner-scrollbar { 
-  width: 98%; 
-  height: 200px;
+  width: 98%;
+}
+
+.inner-scrollbar-wrapper {
+  width: 98%;
+  height: 360px;
   overflow-y: auto;
 }
 
