Fixes #1129: Allow boxes to be dragged in any order on the RS Build surface. Submitted by markg
git-svn-id: https://svn.clinovo.com/clincapture/trunk@1334 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/webapp/designer/css/designer.css
+++ b/web/src/main/webapp/designer/css/designer.css
@@ -359,3 +359,8 @@ div {
   overflow-y: auto;
   max-height: 150px;
 }
+
+.sort {
+  border-color: #357EBD !important;
+  background-color: #F5F5EF !important;
+}
