Fixes #1182: Provide a scrolling bar on the Data box. Submitted by vitaly
git-svn-id: https://svn.clinovo.com/clincapture/trunk@1360 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/webapp/designer/css/designer.css
+++ b/web/src/main/webapp/designer/css/designer.css
@@ -364,3 +364,8 @@ div {
   border-color: #357EBD !important;
   background-color: #F5F5EF !important;
 }
+
+.data-scrollbar {
+  overflow-y: scroll;
+  overflow: auto;
+}
