Fixes #1273: Minor cosmetic enhancements to the Data box items. Submitted by markg
git-svn-id: https://svn.clinovo.com/clincapture/trunk@1411 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/webapp/designer/css/designer.css
+++ b/web/src/main/webapp/designer/css/designer.css
@@ -219,7 +219,6 @@ textarea {
 }
 
 td {
-  cursor: hand;
   cursor: pointer; 
 }
 
@@ -368,4 +367,10 @@ div {
 .data-scrollbar {
   overflow-y: scroll;
   overflow: auto;
+}
+td.group, td.ui-draggable {
+  text-align: left;
+}
+.center-justify {
+  text-align: center;
 }
