--- a/web/src/main/webapp/includes/styles.css
+++ b/web/src/main/webapp/includes/styles.css
@@ -2568,6 +2568,9 @@ a.dnShortcut:hover {
     display: block;
 }
 
+.floatLeft {
+    float: left;
+}
 .fileInputDivWrapper {
     margin-right: 30px;
     overflow: hidden;
