Fixes #1114: Create 'Source Data Verification Progress' widget. Submitted by denis
git-svn-id: https://svn.clinovo.com/clincapture/trunk@1464 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/webapp/includes/css/charts.css
+++ b/web/src/main/webapp/includes/css/charts.css
@@ -135,6 +135,7 @@ form#actionForSave input {
 #toolbar_tc,#toolbar {
 	min-height: 40px;
 	padding-bottom: 5px;
+	padding-top: 5px;
 }
 
 .ui-sortable-placeholder {
