--- a/web/src/main/webapp/includes/styles.css
+++ b/web/src/main/webapp/includes/styles.css
@@ -1096,9 +1096,44 @@ a.breadcrumb_completed:hover, a.breadcrumb_completed:active { font-family: Tahom
    margin-left: 3px;*/
 }
 
-.button_medium { background-color:transparent;
+.button_medium { 
+	background-color:transparent;
     border-width: 0px;
     background-image: url(../images/button_medium_BG.gif);
+    background-repeat: no-repeat;
+    background-position: bottom;
+    font-family: Tahoma, Arial, Helvetica, Sans-Serif;
+    font-size: 11px;
+    line-height: 11px;
+    color: #FFFFFF;
+    font-weight: bold;
+    width: 120px;
+    height: 17px;
+    margin-top: 6px;
+    margin-right: 10px;
+}
+
+.button_medium_green { 
+	background-color:transparent;
+    border-width: 0px;
+    background-image: url(../images/green/button_medium_BG.gif);
+    background-repeat: no-repeat;
+    background-position: bottom;
+    font-family: Tahoma, Arial, Helvetica, Sans-Serif;
+    font-size: 11px;
+    line-height: 11px;
+    color: #FFFFFF;
+    font-weight: bold;
+    width: 120px;
+    height: 17px;
+    margin-top: 6px;
+    margin-right: 10px;
+}
+
+.button_medium_violet { 
+	background-color:transparent;
+    border-width: 0px;
+    background-image: url(../images/violet/button_medium_BG.gif);
     background-repeat: no-repeat;
     background-position: bottom;
     font-family: Tahoma, Arial, Helvetica, Sans-Serif;
