Fixes #1315: Update style of values on "Event Status Details". Submitted by denis
git-svn-id: https://svn.clinovo.com/clincapture/trunk@1466 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/webapp/includes/css/charts.css
+++ b/web/src/main/webapp/includes/css/charts.css
@@ -198,10 +198,10 @@ form#actionForSave input {
 }
 
 .widget .stack .pop-up-visible {
-    color: white;
-    position: absolute;
-    display: block;
-    text-align: center;
+	color: white;
+	position: relative;
+	display: table;
+	text-align: center;
 }
 
 .widget table.captions {
