--- a/web/src/main/webapp/designer/css/designer.css
+++ b/web/src/main/webapp/designer/css/designer.css
@@ -29,9 +29,8 @@ body .container {
 }
 
 body .panel {
+  margin-right: 2px;
   text-align: center;
-	min-height: 167.5px;
-	margin-right: 2px;
 }
 
 body .panel-body {
@@ -49,6 +48,11 @@ body .panel-body {
 .targettable {
   z-index: 0;
   margin-top: -17.5px;
+  min-height: 167.5px;
+}
+
+.targettable .panel {
+  min-height: 160px;
 }
 
 .bordered {
@@ -374,6 +378,13 @@ td.group, td.ui-draggable {
   text-align: center;
 }
 
+.btn {
+  padding: 6px 8px;
+}
+
+#groups, #compare {
+  padding: 0 0 0 0 !important;
+}
 .form-group {
   margin-bottom: 5px;
 }
