Fixes #1312: Add Options on top of target field. Submitted by markg
git-svn-id: https://svn.clinovo.com/clincapture/trunk@1485 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/webapp/designer/css/designer.css
+++ b/web/src/main/webapp/designer/css/designer.css
@@ -381,10 +381,19 @@ td.group, td.ui-draggable {
 .btn {
   padding: 6px 8px;
 }
-
 #groups, #compare {
   padding: 0 0 0 0 !important;
 }
 .form-group {
   margin-bottom: 5px;
+}
+.opt {
+  float: right;
+  margin-top: -3.2rem;
+}
+.parent-target {
+  width: 98% !important;
+}
+#ruleName {
+ width: 98% !important; 
 }
