Fixes #1282: VAL - 'Remove' icon is not working in 'Manage Rules for Items' page. Submitted by frank
git-svn-id: https://svn.clinovo.com/clincapture/trunk@1487 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/webapp/includes/styles.css
+++ b/web/src/main/webapp/includes/styles.css
@@ -2628,3 +2628,7 @@ a.dnShortcut:hover {
     width: 14px;
     z-index: 99999;
 }
+
+#ruleAssignments > tbody > tr > td:last-of-type {
+    white-space: nowrap;
+}
