Refs #1313: Enable to click to drop. Submitted by markg
git-svn-id: https://svn.clinovo.com/clincapture/trunk@1488 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/webapp/designer/css/designer.css
+++ b/web/src/main/webapp/designer/css/designer.css
@@ -61,7 +61,6 @@ body .panel-body {
 }
 
 .dotted-border {
-  margin-top: 3rem;
   min-height: 44px;
   margin-right: 2px;
   border: 2px dotted;
@@ -381,7 +380,7 @@ td.group, td.ui-draggable {
 .btn {
   padding: 6px 8px;
 }
-#groups, #compare {
+.drag-container {
   padding: 0 0 0 0 !important;
 }
 .form-group {
@@ -396,4 +395,7 @@ td.group, td.ui-draggable {
 }
 #ruleName {
  width: 98% !important; 
+}
+.sortable {
+  padding: 5rem !important;
 }
