Fixes #1345: Uploading file functionality gives Oops page. Submitted by frank
git-svn-id: https://svn.clinovo.com/clincapture/trunk@1513 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/webapp/includes/styles.css
+++ b/web/src/main/webapp/includes/styles.css
@@ -2653,3 +2653,14 @@ a.dnShortcut:hover {
 #ruleAssignments > tbody > tr > td:last-of-type {
     white-space: nowrap;
 }
+
+.uploadFileBoxText {
+	font-family: Tahoma Arial, Helvetica, sans-serif;
+	padding: 2px 5px 2px 10px;
+}
+
+.uploadFileBoxText p {
+	font-size: 12px;
+	text-align: justified;
+	word-wrap: normal;
+}
