Fixes #1352: RS breadcumb no longer displayed. Submitted by denis
git-svn-id: https://svn.clinovo.com/clincapture/trunk@1547 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/webapp/designer/css/designer.css
+++ b/web/src/main/webapp/designer/css/designer.css
@@ -373,6 +373,7 @@ div {
 .inner-scrollbar-wrapper {
   width: 98%;
   overflow-y: auto;
+  padding-bottom: 1px;
 }
 
 .inner-scrollbar {
@@ -394,7 +395,9 @@ div {
 }
 
 .data-scrollbar {
-  overflow-y: auto;
+	overflow-y: auto;
+	height: auto;
+	max-height: 500px;
 }
 
 td.group, td.ui-draggable {
